Fix sponsorship table on mobile layout

--- a/src/assets/scss/pages/sponsorship.scss
+++ b/src/assets/scss/pages/sponsorship.scss
@@ -223,6 +223,7 @@
       .level-list {
         display: block;
         list-style: none;
+        padding: 0;
 
         ul.cost {
           list-style-type: none;
@@ -246,13 +247,7 @@
           h4 {
             text-align: center;
           }
-
-          p {
-            font-size: 1.2rem;
-          }
         }
-
-        
       }
 
       .add-ons-table {
